# caster_wheel_urdf_navigation

./: README.md
my_robot_bringup/: CMakeLists.txt  package.xml  setup.py
my_robot_bringup/my_robot_bringup/config/: gazebo_bridge.yaml  nav2_params.yaml  twist_mux.yaml
my_robot_bringup/my_robot_bringup/launch/: bringup.launch.py  localization.node.py  my_robot.launch.py  my_robot.launch.xml  nav2.launch.py
my_robot_bringup/my_robot_bringup/worlds/: simple.world
my_robot_description/: CMakeLists.txt  package.xml  setup.py
my_robot_description/my_robot_description/rviz/: urdf_config.rviz
my_robot_description/my_robot_description/urdf/: mobile_base.xacro  mobile_base_gazebo.xacro
